Update project structure and internal references
Renamed 'style.css' and 'script.js' to 'css/style.css' and 'js/script.js' respectively, updating all references in index.html. Adjusted navigation links and section IDs for better anchor navigation. Updated company name and contact information from 'MultJuros' to 'JurosMult' throughout the HTML.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MultJuros</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>JurosMult</title>
+  <link rel="stylesheet" href="/css/style.css" />
   <link rel="icon" href="/assets/jurosmults.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
 </head>
@@ -15,15 +15,15 @@
         <img src="/assets/jurosmults.png" alt="JurosMult Logo" class="logo" />
       </a>
       <nav>
-        <a class="navs" href="#">Início</a>
-        <a class="navs" href="#">Funcionalidades</a>
-        <a class="navs" href="#">Sobre</a>
-        <a class="navs" href="#">Contato</a>
+        <a class="navs" href="#inicio">Início</a>
+        <a class="navs" href="#one">Funcionalidades</a>
+        <a class="navs" href="#two">Sobre</a>
+        <a class="navs" href="#three">Contato</a>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main id="inicio">
     <h1 id="welcome">Bem-vindo ao <span id="j">Juros</span><span id="m">Mult</span></h1> 
     <p id="slogan">Calculando seu <span>Mult</span> desde 2025.</p>
   </main>
@@ -49,12 +49,12 @@
     <div class="blind">
     <h1 id="abt">Sobre</h1>
     <br>
-    <p class="ps blob">A MultJuros é uma empresa dedicada a simplificar o entendimento e o cálculo de juros compostos. Nosso compromisso é fornecer soluções acessíveis e precisas para ajudar pessoas e empresas a planejarem melhor seus investimentos e finanças. Conte com a MultJuros para tomar decisões financeiras mais informadas!</p>
+    <p class="ps blob">A JurosMult é uma empresa dedicada a simplificar o entendimento e o cálculo de juros compostos. Nosso compromisso é fornecer soluções acessíveis e precisas para ajudar pessoas e empresas a planejarem melhor seus investimentos e finanças. Conte com a MultJuros para tomar decisões financeiras mais informadas!</p>
     <div class="pictures-container">
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureangelo.jpg" alt="Member picture" class="member"/></a><p>Angelo</p></div>
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureartur.jpg" alt="Member picture" class="member"/></a><p>Artur</p></div>
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/picturediogo.jpg" alt="Member picture" class="member"/></a><p>Diogo</p></div>
-      <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/picturejonatas.jpg" alt="Member picture" class="member"/></a><p>Jônatas</p></div>
+      <div class="member-div"><a href="https://github.com/Jolimenezes" target="_blank"><img src="/assets/photos/picturejonatas.jpg" alt="Member picture" class="member"/></a><p>Jônatas</p></div>
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/picturenyls.jpeg" alt="Member picture" class="member"/></a><p>Nyls</p></div>
       <div class="member-div"><a href="https://github.com/akyiiw" target="_blank"><img src="/assets/photos/picturepietro.jpg" alt="Member picture" class="member"/></a><p>Pietro</p></div>
     </div>
@@ -65,14 +65,14 @@
     <h1 id="cont">Contato</h1>
     <br>
     <p class="ps blob">
-    Para entrar em contato conosco, envie um e-mail para <a id="email" href="mailto:contato@multjuros.com">contato@multjuros.com</a>.
+    Para entrar em contato conosco, envie um e-mail para <a id="email" href="mailto:contato@jurosmult.com">contato@jurosmult.com</a>.
     </p>
     </div>
   </section>
 
   <footer>
-    <p class="footers">&copy; 2025 MultJuros. Todos os direitos reservados.<br>(11) 99999-0000 - Código-fonte disponível <a id="repo" href="https://github.com/akyiiw/JurosMult" target="_blank">aqui</a></p><br><p>Inspirado por <a href="https://balatrogame.fandom.com/wiki/Balatro_Wiki" target="_blank">Balatro</a></p>
+    <p class="footers">&copy; 2025 JurosMult. Todos os direitos reservados.<br>(11) 99999-0000 - Código-fonte disponível <a id="repo" href="https://github.com/akyiiw/JurosMult" target="_blank">aqui</a></p><br><p>Inspirado por <a href="https://balatrogame.fandom.com/wiki/Balatro_Wiki" target="_blank">Balatro</a></p>
   </footer>
-  <script src="script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
