Refactor UI classes and IDs for consistency
Updated class and ID names in HTML, CSS, and JS for improved consistency and clarity (e.g., .blind to .blind-container, .calc to .form, #calcular to #calc). Adjusted related event listeners and styling. Also removed redundant or unused CSS and improved text-shadow usage.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div id="navbar" class="navbar">
-      <a href="#">
+      <a href="index.html">
         <img src="/assets/jurosmults.png" alt="JurosMult Logo" class="logo" />
       </a>
       <nav>
@@ -24,21 +24,21 @@
   </header>
 
   <main id="inicio">
-    <h1 id="welcome">Bem-vindo ao <span id="j">Juros</span><span id="m">Mult</span></h1> 
+    <h1>Bem-vindo ao <span id="j">Juros</span><span id="m">Mult</span></h1> 
     <p id="slogan">Calculando seu <span>Mult</span> desde 2025.</p>
   </main>
 
   <section id="one">
-    <div class="blind">
-    <h1 id="func">Funcionalidades</h1>
+    <div class="blind-container">
+    <h1>Funcionalidades</h1>
         <div id="calculadora-container">
         <section id="calculadora">
           <br>
-          <p class="ps" id="para">Calcule o capital em juros compostos!</p>
-          <input class="calc" type="number" id="valor" placeholder="Valor Principal" />
-          <input class="calc" type="number" id="taxa" placeholder="Taxa de Juros (%)" />
-          <input class="calc" type="number" id="tempo" placeholder="Tempo (meses)" />      
-          <button class="calc" id="calcular">Calcular</button>
+          <p id="label">Calcule o capital em juros compostos!</p>
+          <input class="form" type="number" id="valor" placeholder="Valor Principal" />
+          <input class="form" type="number" id="taxa" placeholder="Taxa de Juros (%)" />
+          <input class="form" type="number" id="tempo" placeholder="Tempo (meses)" />      
+          <button class="form" id="calc">Calcular</button>
         </section>
         <img src="/assets/bula.gif" alt="mult" class="mult" />
         </div>
@@ -46,10 +46,10 @@
   </section>
 
   <section id="two">
-    <div class="blind">
-    <h1 id="abt">Sobre</h1>
+    <div class="blind-container">
+    <h1>Sobre</h1>
     <br>
-    <p class="ps blob">A JurosMult é uma empresa dedicada a simplificar o entendimento e o cálculo de juros compostos. Nosso compromisso é fornecer soluções acessíveis e precisas para ajudar pessoas e empresas a planejarem melhor seus investimentos e finanças. Conte com a MultJuros para tomar decisões financeiras mais informadas!</p>
+    <p class="info">A JurosMult é uma empresa dedicada a simplificar o entendimento e o cálculo de juros compostos. Nosso compromisso é fornecer soluções acessíveis e precisas para ajudar pessoas e empresas a planejarem melhor seus investimentos e finanças. Conte com a MultJuros para tomar decisões financeiras mais informadas!</p>
     <div class="pictures-container">
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureangelo.jpg" alt="Member picture" class="member"/></a><p>Angelo</p></div>
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureartur.jpg" alt="Member picture" class="member"/></a><p>Artur</p></div>
@@ -61,17 +61,15 @@
   </section>
 
   <section id="three">
-    <div class="blind">
-    <h1 id="cont">Contato</h1>
+    <div class="blind-container">
+    <h1>Contato</h1>
     <br>
-    <p class="ps blob">
-    Para entrar em contato conosco, envie um e-mail para <a id="email" href="mailto:contato@jurosmult.com">contato@jurosmult.com</a>.
-    </p>
+    <p class="info"> Para entrar em contato conosco, envie um e-mail para <a id="email" href="mailto:contato@jurosmult.com">contato@jurosmult.com</a>. </p>
     </div>
   </section>
 
   <footer>
-    <p class="footers">&copy; 2025 JurosMult. Todos os direitos reservados.<br>(11) 99999-0000 - Código-fonte disponível <a id="repo" href="https://github.com/akyiiw/JurosMult" target="_blank">aqui</a></p><br><p>Inspirado por <a href="https://balatrogame.fandom.com/wiki/Balatro_Wiki" target="_blank">Balatro</a></p>
+    <p class="footer">&copy; 2025 JurosMult. Todos os direitos reservados.<br>(11) 99999-0000 - Código-fonte disponível <a id="repo" href="https://github.com/akyiiw/JurosMult" target="_blank">aqui</a></p><br><p>Inspirado por <a href="https://balatrogame.fandom.com/wiki/Balatro_Wiki" target="_blank">Balatro</a></p>
   </footer>
   <script src="/js/script.js"></script>
 </body>
