--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <br>
     <p class="info">A JurosMult é uma empresa dedicada a simplificar o entendimento e o cálculo de juros compostos. Nosso compromisso é fornecer soluções acessíveis e precisas para ajudar pessoas e empresas a planejarem melhor seus investimentos e finanças. Conte com a MultJuros para tomar decisões financeiras mais informadas!</p>
     <div class="pictures-container">
-      <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureangelo.jpg" alt="Member picture" class="member"/></a><p>Angelo</p></div>
-      <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/pictureartur.jpg" alt="Member picture" class="member"/></a><p>Artur</p></div>
-      <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/picturediogo.jpg" alt="Member picture" class="member"/></a><p>Diogo</p></div>
+      <div class="member-div"><a href="https://github.com/angelowhtz" target="_blank"><img src="/assets/photos/pictureangelo.jpg" alt="Member picture" class="member"/></a><p>Angelo</p></div>
+      <div class="member-div"><a href="https://github.com/Tuzinkkkj" target="_blank"><img src="/assets/photos/pictureartur.jpg" alt="Member picture" class="member"/></a><p>Artur</p></div>
+      <div class="member-div"><a href="https://github.com/Diogo-poke" target="_blank"><img src="/assets/photos/picturediogo.jpg" alt="Member picture" class="member"/></a><p>Diogo</p></div>
       <div class="member-div"><a href="https://github.com/Jolimenezes" target="_blank"><img src="/assets/photos/picturejonatas.jpg" alt="Member picture" class="member"/></a><p>Jônatas</p></div>
       <div class="member-div"><a href="https://github.com/" target="_blank"><img src="/assets/photos/picturenyls.jpeg" alt="Member picture" class="member"/></a><p>Nyls</p></div>
       <div class="member-div"><a href="https://github.com/akyiiw" target="_blank"><img src="/assets/photos/picturepietro.jpg" alt="Member picture" class="member"/></a><p>Pietro</p></div>
